# high-frequency-trading-platform

./: .gitignore  README.md  backtest_loader.py  dashboard.py  ml_predictor.py
data_pipeline/: ingest_ticks.py
execution_engine/: CMakeLists.txt  backtest.cpp  main.cpp
